gcc/testsuite/rust/rustc/ui/argument-suggestions/issue-98894.rs
fn main() {
    (|_, ()| ())(if true {} else {return;});
// { dg-error ".E0057." "" { target *-*-* } .-1 }
}

